# PLink

./: .gitignore  .hgignore  README  README.rst  doc  plink_howto.html  pyproject.toml  setup.cfg  setup.py
dev/: error.py  gap_test.py  hobby.py  mouse_test.py  polylinesample.py  smooth.py  spline.py  subproblem.py  test.lnk  tri.lnk  will.lnk  will.py
dev/init_exps/: euler.py  subproblem.py
dev/sample_links/: bends.lnk  complicated.lnk  fourteen.lnk  many_short_segs.lnk  test2.lnk  tight_weave.lnk  will.lnk
dev/save_stress_test/: save_test.py  test.tex
dev/save_stress_test/output/: fourteen_PL_1000_2.eps  fourteen_PL_1000_2.tikz  fourteen_PL_500_1.eps  fourteen_PL_500_1.tikz  fourteen_smooth_1000_2.eps  fourteen_smooth_1000_2.tikz  fourteen_smooth_500_1.eps  fourteen_smooth_500_1.tikz
dev/save_tests/: main.tex  test.eps  test.py  test.tikz  test_big_gaps.tikz  test_default.tikz
doc/: Makefile  arrow.py  conf.py  crossings.py  editor.py  ipython_tools.py  manager.py  plink.rst  version.py  viewer.py
doc-source/: Makefile  conf.py  index.rst  installing.rst
doc-source/_build/doctrees/: environment.pickle  index.doctree  plink.doctree
doc-source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  plink.html  search.html  searchindex.js
doc-source/_build/html/_sources/: index.txt
doc/_build/html/: .buildinfo  index.html  modindex.html  searchindex.js
doc/_build/html/_sources/: index.txt
doc/doc/: genindex.html  index.html
doc/plink.egg-info/: PKG-INFO  SOURCES.txt
doc_source/: Makefile  conf.py  index.rst
docs/: .buildinfo  __init__.py  canvasvg.py  genindex.html  index.html  installing.html  objects.inv  plink.html  py-modindex.html  search.html  searchindex.js  smooth.py  vertex.py
docs/_sources/: index.rst.txt  installing.rst.txt
docs/_static/: documentation_options.js
docs/doc/: searchindex.js
docs/doc/_sources/: plink.rst.txt
docs/plink.egg-info/: entry_points.txt
plink/: __init__.py  app.py  canvasvg.py  smooth.py  version.py
plink-app/: PLink.py  make.py  plink.icns  release.py  setup.py
plink-app/dmg-maker/: create-dmg  dmg-maker.py
plink-src/: __init__.py  version.py
plink-src/doc/: objects.inv  plink.html  searchindex.js
plink-src/doc/_sources/: index.txt  installing.txt  plink.txt
plink/doc/: genindex.html  index.html  installing.html  modindex.html  objects.inv  plink.html  py-modindex.html  search.html  searchindex.js
plink/doc/_sources/: installing.txt
plink_app/: PLink.py  plink.tiff  release.py  setup.py
plink_app/dmg-maker/: dmg-maker.py
plink_exe/: PLink.py  PLink.spec  test.py
plink_src/: __init__.py  app.py  arrow.py  canvasvg.py  colors.py  crossings.py  dialog.py  editor.py  gui.py  ip_tk_root.py  ipython_tk_warn.py  ipython_tools.py  manager.py  scaling.py  smooth.py  version.py  vertex.py  viewer.py
plink_src/doc/: genindex.html  index.html  installing.html  objects.inv  plink.html  py-modindex.html  search.html  searchindex.js
src/plink/: __init__.py  app.py  arrow.py  diagram.py  editor.py  gui.py  scaling.py  version.py  vertex.py  viewer.py
