[metadata]
name = plink
description = A full featured Tk-based knot and link editor
long_description = file: README.rst
version = attr: plink.__version__
author = Marc Culler and Nathan M. Dunfield
author_email = culler@uic.edu, nathan@dunfield.info
url = https://github.com/3-manifolds/PLink
license = GPLv2+
keywords = knot, link, editor, SnapPy
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires >= 3
zip_safe = False
packages = plink
package_dir =
    plink = src/plink

[options.package_data]
plink =
    doc/*
    doc/*/*

[options.entry_points]
console_scripts =
    plink = plink.app:main
